--- a/components/FooterNav/FooterNav.module.css
+++ b/components/FooterNav/FooterNav.module.css
@@ -52,6 +52,7 @@
   .list {
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 32px;
   }
